--- a/pom.xml
+++ b/pom.xml
@@ -125,8 +125,9 @@
                 <groupId>com.google.appengine</groupId>
                 <artifactId>gcloud-maven-plugin</artifactId>
                 <version>1.9.17a</version>
+                <!--<version>2.0.9.74.v20150814</version>-->
                 <configuration>
-                    <gcloud_directory>/usr/local/google/home/alexismp/google-cloud-sdk/</gcloud_directory>
+                    <gcloud_directory>/path/to/google-cloud-sdk/</gcloud_directory>
                 </configuration>            
             </plugin>
         </plugins>
