--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 
     <properties>
         <appengine.app.version>devoxxfr</appengine.app.version>
-        <appengine.target.version>1.9.18</appengine.target.version>
+        <appengine.target.version>1.9.25</appengine.target.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
@@ -37,7 +37,7 @@
         <dependency>
             <groupId>com.firebase</groupId>
             <artifactId>firebase-client-jvm</artifactId>
-            <version>2.0.3</version>
+            <version>2.3.1</version>
         </dependency>
         
         <dependency>
@@ -75,7 +75,7 @@
         <dependency>
             <groupId>com.google.appengine</groupId>
             <artifactId>appengine-endpoints</artifactId>
-            <version>1.9.18</version>
+            <version>1.9.25</version>
         </dependency>
         <dependency>
             <groupId>javax.inject</groupId>
@@ -100,7 +100,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-war-plugin</artifactId>
-                <version>2.3</version>
+                <version>2.6</version>
                 <configuration>
                     <archiveClasses>true</archiveClasses>
                     <webResources>
@@ -127,7 +127,8 @@
                 <version>1.9.17a</version>
                 <!--<version>2.0.9.74.v20150814</version>-->
                 <configuration>
-                    <gcloud_directory>/path/to/google-cloud-sdk/</gcloud_directory>
+                    <!--<gcloud_directory>/path/to/google-cloud-sdk/</gcloud_directory>-->
+                    <gcloud_directory>/usr/local/google/home/alexismp/google-cloud-sdk/</gcloud_directory>
                 </configuration>            
             </plugin>
         </plugins>
