--- a/pom.xml
+++ b/pom.xml
@@ -9,8 +9,8 @@
     <artifactId>EgressStations</artifactId>
 
     <properties>
-        <appengine.app.version>devoxxfr</appengine.app.version>
-        <appengine.target.version>1.9.18</appengine.target.version>
+        <appengine.app.version>september-update</appengine.app.version>
+        <appengine.target.version>1.9.64</appengine.target.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
@@ -23,10 +23,10 @@
         </dependency>
         <dependency>
             <groupId>javax.servlet</groupId>
-            <artifactId>servlet-api</artifactId>
-            <version>2.5</version>
+            <artifactId>javax.servlet-api</artifactId>
+            <version>3.1.0</version>
             <scope>provided</scope>
-        </dependency>
+        </dependency>        
         <dependency>
             <groupId>jstl</groupId>
             <artifactId>jstl</artifactId>
@@ -37,13 +37,25 @@
         <dependency>
             <groupId>com.firebase</groupId>
             <artifactId>firebase-client-jvm</artifactId>
-            <version>2.0.3</version>
+            <version>2.2.4</version>
         </dependency>
-        
+
+<!--        <dependency>
+            <groupId>com.gogle.firebase</groupId>
+            <artifactId>firebase-database</artifactId>
+            <version>16.0.1</version>
+        </dependency>
+                
         <dependency>
             <groupId>com.firebase</groupId>
             <artifactId>geofire</artifactId>
-            <version>[1.1.0,)</version>
+            <version>[2.1.1,)</version>
+        </dependency>-->
+        
+        <dependency>
+          <groupId>com.firebase</groupId>
+          <artifactId>geofire-java</artifactId>
+          <version>2.1.3</version>
         </dependency>
 
 
@@ -51,13 +63,13 @@
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>4.11</version>
+            <version>4.12</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.mockito</groupId>
             <artifactId>mockito-all</artifactId>
-            <version>1.9.5</version>
+            <version>1.10.19</version>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -75,7 +87,7 @@
         <dependency>
             <groupId>com.google.appengine</groupId>
             <artifactId>appengine-endpoints</artifactId>
-            <version>1.9.18</version>
+            <version>${appengine.target.version}</version>
         </dependency>
         <dependency>
             <groupId>javax.inject</groupId>
@@ -89,18 +101,18 @@
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
-                <version>2.5.1</version>
+                <version>3.8.0</version>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
-                    <source>1.7</source>
-                    <target>1.7</target>
+                    <source>1.8</source>
+                    <target>1.8</target>
                 </configuration>
             </plugin>
 
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-war-plugin</artifactId>
-                <version>2.3</version>
+                <version>3.2.2</version>
                 <configuration>
                     <archiveClasses>true</archiveClasses>
                     <webResources>
@@ -124,7 +136,7 @@
             <plugin>        
                 <groupId>com.google.appengine</groupId>
                 <artifactId>gcloud-maven-plugin</artifactId>
-                <version>1.9.17a</version>
+                <version>2.0.9.133.v201611104</version>
                 <configuration>
                     <gcloud_directory>/usr/local/google/home/alexismp/google-cloud-sdk/</gcloud_directory>
                 </configuration>            
